# doc2md

./: README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
doc2md/: __init__.py  api.py  converter.py  mcp_server.py
